Fix for resizing from large to small width viewport quickly; Fix resizing on mobile viewport change; Refactor some nakasentro; Mobile make zoom overlay and share overlay only the height/width of image; Hide click to copy url link from dev share for mobile touch;

--- a/web/app/themes/stone-roberts-anew/resources/assets/styles/common/_global.scss
+++ b/web/app/themes/stone-roberts-anew/resources/assets/styles/common/_global.scss
@@ -110,7 +110,7 @@ body.front {
       margin-left: $image-margin-horizontal;
     }
 
-    @include breakpoint($xs) {
+    @include breakpoint($xs-sm-only) {
       width: 90%;
     }
   }
